# cursorq

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  debug-exe-no-access.md  package-lock.json  package.json  setup-gitea-runner.bat
.gitea/workflows/: build-windows.yml
.github/workflows/: build-windows.yml  test-build.yml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
apps/desktop/: package.json
apps/desktop/scripts/: copy-assets.mjs
apps/desktop/src/: capsule-size.ts  i18n.ts  main.ts  preload.ts
apps/tauri/: index.html  package.json  vite.config.ts
apps/tauri/src/: debug-mode.ts  debug-ui-format.ts  debug-ui.ts  format.ts  i18n.ts  main.ts  mascot-anim.ts  mascot-gifs.ts  styles.css  tier-theme.ts  utils.ts  window-chrome.ts
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  log_util.rs  main.rs  paths.rs  prefs.rs  sync.rs  win_dwm.rs
assets/copy/: README.md  jokes.json  states.json
assets/icon/: README.md
content/: README.md  manifest.json
content/copy/: jokes.json  states.json
docs/: GITHUB_PREP.md  TAURI_DEV_SETUP.md
release/: README.md
release/cursorq/: README.txt
release/cursorq/config/: remote.json  remote.json.example
release/cursorq/scripts/: refresh-usage.mjs
scripts/: add-cargo-to-path.ps1  bash-env.sh  dev-tauri.cmd  dev-tauri.sh  install-bash-hook.sh  package-release.mjs  publish-gitea-release.mjs  refresh-usage.mjs  release-bump.mjs  slice-mascot-sprites.py  tauri-dev-launcher.mjs  tauri-env.cmd  tauri-env.ps1  validate-copy.mjs
(+61 files in other folders)
