[package]
name = "cursorq-tauri"
version = "0.1.0"
description = "CursorQ desktop"
authors = ["cursorq"]
edition = "2021"

[lib]
name = "cursorq_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
which = "7"

[profile.dev]
incremental = true
