[package]
name = "cursorq-tauri"
version = "0.1.1"
description = "CursorQ desktop"
authors = ["cursorq"]
edition = "2021"

[lib]
name = "cursorq_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
which = "7"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }

[profile.dev]
incremental = true
